--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -14,11 +14,9 @@
 # docker run -i --rm -p 8080:8080 quarkus/getting-started
 #
 ###
-FROM registry.access.redhat.com/ubi8/ubi-minimal:8.1
+FROM registry.access.redhat.com/ubi8/ubi-minimal
 WORKDIR /work/
-COPY --chown=1001:root target/*-runner /work/application
-
+COPY target/*-runner /work/application
+RUN chmod 775 /work
 EXPOSE 8080
-USER 1001
-
 CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
